# openlca-ipc

./: .gitignore  MANIFEST.in  PROJECT_SUMMARY.md  README-pypi.md  README.md  READme.md  REVIEW_SUMMARY.md  project.toml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.claude/: settings.local.json
docs/: fixes.md  setup.md
documentation/: DOCUMENTATION_MAP.md  best-practices.md  faq.md  index.md  installation.md  quickstart.md  troubleshooting.md
documentation/api/: README.md  client.md  search.md
examples/: README.md  example-complete.py  ipc_from_scratch.ipynb  ipc_from_scratch.py  test-pet-pc.py  test_mod.ipynb  test_package.py  utils_example2Advanced.py  utils_examples.py  working_demo.py
mcp-server/: .env.example  ARCHITECTURE.md  HOW_IT_WORKS.md  INSTALLATION.md  PROOF_OF_INTEGRATION.txt  README.md  pyproject.toml  requirements.txt  test_integration.py
mcp-server/examples/: README.md
mcp-server/examples/n8n-workflows/: basic_lca_workflow.json
mcp-server/src/: __init__.py  server.py
olca-utils/: __init__.py  about.md  systems.py
olca_utils/: __init__.py  calculations.py  client.py  contributions.py  data.py  export.py  parameters.py  results.py  search.py  systems.py  uncertainty.py
openlca_ipc/: __init__.py
